[package]
name = "chipay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.42"
dashmap = "6.1.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
anyhow = "1.0.100"
md5 = "0.8.0"
rand = "0.9.2"
toml = "0.9.7"
axum-embed = "0.1.0"
rust-embed = "8.7.2"
sea-orm = "1.1.16"
